--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/hugo-theme-learn"]
-	path = themes/hugo-theme-learn
-	url = https://github.com/matcornic/hugo-theme-learn
+[submodule "hugo-theme-learn"]
+	path = hugo-theme-learn
+	url = https://github.com/matcornic/hugo-theme-learn.git
